changes to fix overlappingon homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,13 +189,12 @@ td {
 main {
     display: flex;
     flex: auto;
-
 }
 
 #get_in_touch h1, h3 {
 
-    padding-top: 5rem;
-    padding-left: 5rem;
+    padding-top: 2rem;
+    padding-left: 2rem;
 }
 
 #map {
